--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13744,6 +13744,47 @@ a.text-dark:focus {
   color: black;
 }
 
+.footer {
+  width: 100%;
+  height: 250px;
+}
+
+.footer .footer_top {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.footer .footer_top img {
+  height: 90px;
+}
+
+.footer .footer_top i {
+  font-size: 25px;
+  padding: 5px;
+}
+
+.footer .footer_top a {
+  color: #1B3C59;
+}
+
+.footer .footer_bottom {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  background: #1B3C59;
+}
+
+.footer .footer_bottom small {
+  display: inline-block;
+  font-size: 12px;
+  color: white;
+}
+
 .main .main_left,
 .main .main_right {
   height: 400px;
@@ -13797,45 +13838,19 @@ a.text-dark:focus {
   margin: 20px;
 }
 
-.footer {
-  width: 100%;
-  height: 250px;
+.privacy-main {
+  padding: 20px 150px;
 }
 
-.footer .footer_top {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+.privacy-main h1 {
+  font-weight: 700;
+  font-size: 32px;
 }
 
-.footer .footer_top img {
-  height: 90px;
-}
-
-.footer .footer_top i {
-  font-size: 25px;
-  padding: 5px;
-}
-
-.footer .footer_top a {
-  color: #1B3C59;
-}
-
-.footer .footer_bottom {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 70px;
-  background: #1B3C59;
-}
-
-.footer .footer_bottom small {
-  display: inline-block;
-  font-size: 12px;
-  color: white;
+.privacy-main p {
+  font-size: 17px;
+  font-weight: 500;
+  margin: 20px 0;
 }
 
 * {
