added work with us page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,6 +23,9 @@
 // Partials privacy-policy
 @import 'partials/privacy-policy/_privacy-main';
 
+// Partials work-with-us
+@import 'partials/work-with-us/_work-main';
+
 * {
   color: #1B3C59;
 }
