--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13853,6 +13853,37 @@ a.text-dark:focus {
   margin: 20px 0;
 }
 
+.work_main {
+  margin: 0 150px;
+}
+
+.work_main h1 {
+  font-weight: 700;
+}
+
+.work_main h2 {
+  font-weight: 700;
+}
+
+.work_main h3 {
+  font-weight: 700;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+.work_main p {
+  font-size: 16px;
+}
+
+.work_main p :last-child {
+  display: inline-block;
+  margin-top: 30px;
+}
+
+.work_main ul li {
+  font-size: 16px;
+}
+
 * {
   color: #1B3C59;
 }
