added nav-item underline

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13741,7 +13741,12 @@ a.text-dark:focus {
 
 .header .header_right ul li a {
   text-decoration: none;
-  color: black;
+  color: #1B3C59;
+}
+
+.header .header_right ul li.active a {
+  border-bottom: 2px solid lightgreen;
+  padding-bottom: 5px;
 }
 
 .footer {
