--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -21,7 +21,13 @@
         line-height: 100px;
         a {
           text-decoration: none;
-          color: black;
+          color: #1B3C59;
+        }
+        &.active {
+          a {
+            border-bottom: 2px solid lightgreen;
+            padding-bottom: 5px;
+          }
         }
       }
     }
