--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,6 +26,9 @@
 // Partials work-with-us
 @import 'partials/work-with-us/_work-main';
 
+// Partials students
+@import 'partials/students-page/_main-students';
+
 * {
   color: #1B3C59;
 }
